--- a/data/json/monthlyEnergy_nameAsKey_randomized.json
+++ b/data/json/monthlyEnergy_nameAsKey_randomized.json
@@ -2372,195 +2372,195 @@
         "Latitude": 240277, 
         "electric": [
             {
-                "consumption": 673365.91, 
+                "consumption": 15165, 
                 "month": "2016-01-01"
             }, 
             {
-                "consumption": 655636.24, 
+                "consumption": 18421.11, 
                 "month": "2016-02-01"
             }, 
             {
-                "consumption": 722864.52, 
+                "consumption": 20729.19, 
                 "month": "2016-03-01"
             }, 
             {
-                "consumption": 585351.92, 
+                "consumption": 17506.31, 
                 "month": "2016-04-01"
             }, 
             {
-                "consumption": 766963.13,                 
+                "consumption": 21078.19,                 
                 "month": "2016-05-01"
             }, 
             {
-                "consumption": 746220.95,                 
+                "consumption": 25806,                 
                 "month": "2016-06-01"
             }, 
             {
-                "consumption": 842048.17,                 
+                "consumption": 99828,                 
                 "month": "2013-07-01"
             }, 
             {
-                "consumption": 708912.39, 
+                "consumption": 105140, 
                 "month": "2016-08-01"
             }, 
             {
-                "consumption": 787445.71, 
+                "consumption": 79511, 
                 "month": "2016-09-01"
             }, 
             {
-                "consumption": 783046.11, 
+                "consumption": 76582.6, 
                 "month": "2016-10-01"
             }, 
             {
-                "consumption": 732006.26, 
+                "consumption": 41016.2, 
                 "month": "2016-11-01"
             }, 
             {
-                "consumption": 707636.87, 
+                "consumption": 49262.41, 
                 "month": "2016-12-01"
             }, 
             {
-                "consumption": 598427.37, 
+                "consumption": 49810.5, 
                 "month": "2017-01-01"
             }, 
             {
-                "consumption": 633799.08, 
+                "consumption": 44962.8, 
                 "month": "2017-02-01"
             }, 
             {
-                "consumption": 852421.72, 
+                "consumption": 58329.2, 
                 "month": "2017-03-01"
             }, 
             {
-                "consumption": 762959.33, 
+                "consumption": 68896.12, 
                 "month": "2017-04-01"
             }, 
             {
-                "consumption": 816782.43, 
+                "consumption": 93150.33, 
                 "month": "2017-05-01"
             }, 
             {
-                "consumption": 839183.52, 
+                "consumption": 93191.07, 
                 "month": "2017-06-01"
             }, 
             {
-                "consumption": 829255.77, 
+                "consumption": 75571.6, 
                 "month": "2017-07-01"
             }, 
             {
-                "consumption": 859977.92, 
+                "consumption": 98100.8, 
                 "month": "2017-08-01"
             }, 
             {
-                "consumption": 806750.35, 
+                "consumption": 62145.4, 
                 "month": "2017-09-01"
             }, 
             {
-                "consumption": 722701.94, 
+                "consumption": 69524.06, 
                 "month": "2017-10-01"
             }, 
             {
-                "consumption": 673676.96, 
+                "consumption": 59401.4, 
                 "month": "2017-11-01"
             }, 
             {
-                "consumption": 685291.89, 
+                "consumption": 41653.2, 
                 "month": "2017-12-01"
             }, 
             {
-                "consumption": 650354.46, 
+                "consumption": 37564.2, 
                 "month": "2018-01-01"
             }, 
             {
-                "consumption": 642070.88, 
+                "consumption": 62121.1, 
                 "month": "2018-02-01"
             }, 
             {
-                "consumption": 695709.55, 
+                "consumption": 85865.4, 
                 "month": "2018-03-01"
             }, 
             {
-                "consumption": 725648.39, 
+                "consumption": 83200.56, 
                 "month": "2018-04-01"
             }, 
             {
-                "consumption": 813276.95, 
+                "consumption": 96104.5, 
                 "month": "2018-05-01"
             }, 
             {
-                "consumption": 836322.1, 
+                "consumption": 95912.8, 
                 "month": "2018-06-01"
             }, 
             {
-                "consumption": 893222.4, 
+                "consumption": 79798.86, 
                 "month": "2018-07-01"
             }, 
             {
-                "consumption": 927991.72, 
+                "consumption": 98176.45, 
                 "month": "2018-08-01"
             },
             {
-                "consumption": 870570.44, 
+                "consumption": 90793.96, 
                 "month": "2018-09-01"
             },
             {
-                "consumption": 742444.15, 
+                "consumption": 98914.16, 
                 "month": "2018-10-01"
             },
             {
-                "consumption": 711100.33, 
+                "consumption": 93299.74, 
                 "month": "2018-11-01"
             },
             {
-                "consumption": 898235.64, 
+                "consumption": 82334.46, 
                 "month": "2018-12-01"
             },
             {
-                "consumption": 1005801.43, 
+                "consumption": 87548.53, 
                 "month": "2019-01-01"
             },
             {
-                "consumption": 954247.21, 
+                "consumption": 82371.82, 
                 "month": "2019-02-01"
             },
             {
-                "consumption": 1226447.5, 
+                "consumption": 72032.95, 
                 "month": "2019-03-01"
             },
             {
-                "consumption": 982461.94, 
+                "consumption": 66704.45, 
                 "month": "2019-04-01"
             },
             {
-                "consumption": 1375330.13, 
+                "consumption": 83200.8, 
                 "month": "2019-05-01"
             },
             {
-                "consumption": 1260556.53, 
+                "consumption": 72870.7, 
                 "month": "2019-06-01"
             },
             {
-                "consumption": 1288504.52, 
+                "consumption": 80120.44, 
                 "month": "2019-07-01"
             },
             {
-                "consumption": 1085186.4, 
+                "consumption": 103422.34, 
                 "month": "2019-08-01"
             },
             {
-                "consumption": 984727.23, 
+                "consumption": 79879.36, 
                 "month": "2019-09-01"
             },
             {
-                "consumption": 1053440.64, 
+                "consumption": 81876.1, 
                 "month": "2019-10-01"
             },
             {
-                "consumption": 1003010.44, 
+                "consumption": 41395.16, 
                 "month": "2019-11-01"
             },
             {
-                "consumption": 1120174.14, 
+                "consumption": 22812.03, 
                 "month": "2019-12-01"
             },
             {
@@ -2568,99 +2568,99 @@
                 "month": "2020-01-01"
             },
             {
-                "consumption": 1150565.3, 
+                "consumption": 16609.5, 
                 "month": "2020-02-01"
             },
             {
-                "consumption": 1162330.98, 
+                "consumption": 20637.03, 
                 "month": "2020-03-01"
             },
             {
-                "consumption": 1096185.13, 
+                "consumption": 6105.65, 
                 "month": "2020-04-01"
             },
             {
-                "consumption": 1199294.72, 
+                "consumption": 4420.42, 
                 "month": "2020-05-01"
             },
             {
-                "consumption": 1289231.49, 
+                "consumption": 11407.1, 
                 "month": "2020-06-01"
             },
             {
-                "consumption": 1123500.44, 
+                "consumption": 3854.72, 
                 "month": "2020-07-01"
             },
             {
-                "consumption": 1365617.59, 
+                "consumption": 6300.12, 
                 "month": "2020-08-01"
             },
             {
-                "consumption": 1329994.24, 
+                "consumption": 11422.73, 
                 "month": "2020-09-01"
             },
             {
-                "consumption": 1337142.45, 
+                "consumption": 17248.28, 
                 "month": "2020-10-01"
             },
             {
-                "consumption": 1099611.33, 
+                "consumption": 12142.38, 
                 "month": "2020-11-01"
             },
             {
-                "consumption": 1030096.45, 
+                "consumption": 15836.04, 
                 "month": "2020-12-01"
             },
             {
-                "consumption": 602671, 
+                "consumption": 24217, 
                 "month": "2021-01-01"
             },
             {
-                "consumption": 599553, 
+                "consumption": 50263, 
                 "month": "2021-02-01"
             },
             {
-                "consumption": 610483, 
+                "consumption": 16772, 
                 "month": "2021-03-01"
             },
             {
-                "consumption": 595460, 
+                "consumption": 21931, 
                 "month": "2021-04-01"
             },
             {
-                "consumption": 667937, 
+                "consumption": 4627, 
                 "month": "2021-05-01"
             },
             {
-                "consumption": 752210, 
+                "consumption": 1855, 
                 "month": "2021-06-01"
             },
             {
-                "consumption": 703429, 
+                "consumption": 2700, 
                 "month": "2021-07-01"
             },
             {
-                "consumption": 667924, 
+                "consumption": 15609, 
                 "month": "2021-08-01"
             },
             {
-                "consumption": 587406, 
+                "consumption": 15900, 
                 "month": "2021-09-01"
             },
             {
-                "consumption": 637209, 
+                "consumption": 35136, 
                 "month": "2021-10-01"
             },
             {
-                "consumption": 596020, 
+                "consumption": 8844, 
                 "month": "2021-11-01"
             },
             {
-                "consumption": 616228, 
+                "consumption": 13792, 
                 "month": "2021-12-01"
             }
         ], 
-        "longitude": -1046532, 
+        "longitude": -99.126600, 
         "area": 1485
     },
     "Estado de Mexico": {
