--- a/data/json/monthlyEnergy_nameAsKey_0415.json
+++ b/data/json/monthlyEnergy_nameAsKey_0415.json
@@ -2372,291 +2372,291 @@
         "Latitude": 240277, 
         "electric": [
             {
-                "consumption": 673365.91, 
+                "consumption": 673365.603333333333, 
                 "month": "2016-01-01"
             }, 
             {
-                "consumption": 655636.24, 
+                "consumption": 655636.603333333333, 
                 "month": "2016-02-01"
             }, 
             {
-                "consumption": 722864.52, 
+                "consumption": 722864.603333333333, 
                 "month": "2016-03-01"
             }, 
             {
-                "consumption": 585351.92, 
+                "consumption": 585351.603333333333, 
                 "month": "2016-04-01"
             }, 
             {
-                "consumption": 766963.13,                 
+                "consumption": 766963.603333333333,                 
                 "month": "2016-05-01"
             }, 
             {
-                "consumption": 746220.95,                 
+                "consumption": 746220.603333333333,                 
                 "month": "2016-06-01"
             }, 
             {
-                "consumption": 842048.17,                 
+                "consumption": 842048.603333333333,                 
                 "month": "2016-07-01"
             }, 
             {
-                "consumption": 708912.39, 
+                "consumption": 708912.603333333333, 
                 "month": "2016-08-01"
             }, 
             {
-                "consumption": 787445.71, 
+                "consumption": 787445.603333333333, 
                 "month": "2016-09-01"
             }, 
             {
-                "consumption": 783046.11, 
+                "consumption": 783046.603333333333, 
                 "month": "2016-10-01"
             }, 
             {
-                "consumption": 732006.26, 
+                "consumption": 732006.603333333333, 
                 "month": "2016-11-01"
             }, 
             {
-                "consumption": 707636.87, 
+                "consumption": 707636.603333333333, 
                 "month": "2016-12-01"
             }, 
             {
-                "consumption": 598427.37, 
+                "consumption": 598427.603333333333, 
                 "month": "2017-01-01"
             }, 
             {
-                "consumption": 633799.08, 
+                "consumption": 633799.603333333333, 
                 "month": "2017-02-01"
             }, 
             {
-                "consumption": 852421.72, 
+                "consumption": 852421.603333333333, 
                 "month": "2017-03-01"
             }, 
             {
-                "consumption": 762959.33, 
+                "consumption": 762959.603333333333, 
                 "month": "2017-04-01"
             }, 
             {
-                "consumption": 816782.43, 
+                "consumption": 816782.603333333333, 
                 "month": "2017-05-01"
             }, 
             {
-                "consumption": 839183.52, 
+                "consumption": 839183.603333333333, 
                 "month": "2017-06-01"
             }, 
             {
-                "consumption": 829255.77, 
+                "consumption": 829255.603333333333, 
                 "month": "2017-07-01"
             }, 
             {
-                "consumption": 859977.92, 
+                "consumption": 859977.603333333333, 
                 "month": "2017-08-01"
             }, 
             {
-                "consumption": 806750.35, 
+                "consumption": 806750.603333333333, 
                 "month": "2017-09-01"
             }, 
             {
-                "consumption": 722701.94, 
+                "consumption": 722701.603333333333, 
                 "month": "2017-10-01"
             }, 
             {
-                "consumption": 673676.96, 
+                "consumption": 673676.603333333333, 
                 "month": "2017-11-01"
             }, 
             {
-                "consumption": 685291.89, 
+                "consumption": 685291.603333333333, 
                 "month": "2017-12-01"
             }, 
             {
-                "consumption": 650354.46, 
+                "consumption": 650354.603333333333, 
                 "month": "2018-01-01"
             }, 
             {
-                "consumption": 642070.88, 
+                "consumption": 642070.603333333333, 
                 "month": "2018-02-01"
             }, 
             {
-                "consumption": 695709.55, 
+                "consumption": 695709.603333333333, 
                 "month": "2018-03-01"
             }, 
             {
-                "consumption": 725648.39, 
+                "consumption": 725648.603333333333, 
                 "month": "2018-04-01"
             }, 
             {
-                "consumption": 813276.95, 
+                "consumption": 813276.603333333333, 
                 "month": "2018-05-01"
             }, 
             {
-                "consumption": 836322.1, 
+                "consumption": 836322.603333333333, 
                 "month": "2018-06-01"
             }, 
             {
-                "consumption": 893222.4, 
+                "consumption": 893222.603333333333, 
                 "month": "2018-07-01"
             }, 
             {
-                "consumption": 927991.72, 
+                "consumption": 927991.603333333333, 
                 "month": "2018-08-01"
             },
             {
-                "consumption": 870570.44, 
+                "consumption": 870570.603333333333, 
                 "month": "2018-09-01"
             },
             {
-                "consumption": 742444.15, 
+                "consumption": 742444.603333333333, 
                 "month": "2018-10-01"
             },
             {
-                "consumption": 711100.33, 
+                "consumption": 711100.603333333333, 
                 "month": "2018-11-01"
             },
             {
-                "consumption": 898235.64, 
+                "consumption": 898235.603333333333, 
                 "month": "2018-12-01"
             },
             {
-                "consumption": 1005801.43, 
+                "consumption": 1005801.603333333333, 
                 "month": "2019-01-01"
             },
             {
-                "consumption": 954247.21, 
+                "consumption": 954247.603333333333, 
                 "month": "2019-02-01"
             },
             {
-                "consumption": 1226447.5, 
+                "consumption": 1226447.603333333333, 
                 "month": "2019-03-01"
             },
             {
-                "consumption": 982461.94, 
+                "consumption": 982461.603333333333, 
                 "month": "2019-04-01"
             },
             {
-                "consumption": 1375330.13, 
+                "consumption": 1375330.603333333333, 
                 "month": "2019-05-01"
             },
             {
-                "consumption": 1260556.53, 
+                "consumption": 1260556.603333333333, 
                 "month": "2019-06-01"
             },
             {
-                "consumption": 1288504.52, 
+                "consumption": 1288504.603333333333, 
                 "month": "2019-07-01"
             },
             {
-                "consumption": 1085186.4, 
+                "consumption": 1085186.603333333333, 
                 "month": "2019-08-01"
             },
             {
-                "consumption": 984727.23, 
+                "consumption": 984727.603333333333, 
                 "month": "2019-09-01"
             },
             {
-                "consumption": 1053440.64, 
+                "consumption": 1053440.603333333333, 
                 "month": "2019-10-01"
             },
             {
-                "consumption": 1003010.44, 
+                "consumption": 1003010.603333333333, 
                 "month": "2019-11-01"
             },
             {
-                "consumption": 1120174.14, 
+                "consumption": 1120174.603333333333, 
                 "month": "2019-12-01"
             },
             {
-                "consumption": 479436.89, 
+                "consumption": 479436.603333333333, 
                 "month": "2020-01-01"
             },
             {
-                "consumption": 1150565.3, 
+                "consumption": 1150565.603333333333, 
                 "month": "2020-02-01"
             },
             {
-                "consumption": 1162330.98, 
+                "consumption": 1162330.603333333333, 
                 "month": "2020-03-01"
             },
             {
-                "consumption": 1096185.13, 
+                "consumption": 1096185.603333333333, 
                 "month": "2020-04-01"
             },
             {
-                "consumption": 1199294.72, 
+                "consumption": 1199294.603333333333, 
                 "month": "2020-05-01"
             },
             {
-                "consumption": 1289231.49, 
+                "consumption": 1289231.603333333333, 
                 "month": "2020-06-01"
             },
             {
-                "consumption": 1123500.44, 
+                "consumption": 1123500.603333333333, 
                 "month": "2020-07-01"
             },
             {
-                "consumption": 1365617.59, 
+                "consumption": 1365617.603333333333, 
                 "month": "2020-08-01"
             },
             {
-                "consumption": 1329994.24, 
+                "consumption": 1329994.603333333333, 
                 "month": "2020-09-01"
             },
             {
-                "consumption": 1337142.45, 
+                "consumption": 1337142.603333333333, 
                 "month": "2020-10-01"
             },
             {
-                "consumption": 1099611.33, 
+                "consumption": 1099611.603333333333, 
                 "month": "2020-11-01"
             },
             {
-                "consumption": 1030096.45, 
+                "consumption": 1030096.603333333333, 
                 "month": "2020-12-01"
             },
             {
-                "consumption": 602671, 
+                "consumption": 602671.603333333333, 
                 "month": "2021-01-01"
             },
             {
-                "consumption": 599553, 
+                "consumption": 599553.603333333333, 
                 "month": "2021-02-01"
             },
             {
-                "consumption": 610483, 
+                "consumption": 610483.603333333333, 
                 "month": "2021-03-01"
             },
             {
-                "consumption": 595460, 
+                "consumption": 595460.603333333333, 
                 "month": "2021-04-01"
             },
             {
-                "consumption": 667937, 
+                "consumption": 667937.603333333333, 
                 "month": "2021-05-01"
             },
             {
-                "consumption": 752210, 
+                "consumption": 752210.603333333333, 
                 "month": "2021-06-01"
             },
             {
-                "consumption": 703429, 
+                "consumption": 703429.603333333333, 
                 "month": "2021-07-01"
             },
             {
-                "consumption": 667924, 
+                "consumption": 667924.603333333333, 
                 "month": "2021-08-01"
             },
             {
-                "consumption": 587406, 
+                "consumption": 587406.603333333333, 
                 "month": "2021-09-01"
             },
             {
-                "consumption": 637209, 
+                "consumption": 637209.603333333333, 
                 "month": "2021-10-01"
             },
             {
-                "consumption": 596020, 
+                "consumption": 596020.603333333333, 
                 "month": "2021-11-01"
             },
             {
-                "consumption": 616228, 
+                "consumption": 616228.603333333333, 
                 "month": "2021-12-01"
             }
         ], 
