--- a/data/json/monthlyEnergy_nameAsKey_randomized.json
+++ b/data/json/monthlyEnergy_nameAsKey_randomized.json
@@ -2736,7 +2736,32 @@
             }
         ], 
         "longitude": -101.25, 
-        "area": 30607
+        "area": 30607,
+        "chilled water":[
+            {
+                "consumption": 375.520, 
+                "month": "2016-01-01"
+            }, 
+            {
+                "consumption": 1126.000, 
+                "month": "2017-01-01"
+            }, 
+            {
+                "consumption": 1126.000, 
+                "month": "2018-01-01"
+            },{
+                "consumption": 1126.000, 
+                "month": "2019-01-01"
+            }, 
+            {
+                "consumption": 1126.000, 
+                "month": "2020-01-01"
+            }, 
+            {
+                "consumption": 1126.000, 
+                "month": "2021-01-01"
+            }
+        ]
     },
     "Michoacán": {
         "function": "dormitory", 
@@ -3032,7 +3057,32 @@
             }
         ], 
         "longitude": -101.25, 
-        "area": 30607
+        "area": 30607,
+        "chilled water":[
+            {
+                "consumption": 729.030, 
+                "month": "2016-01-01"
+            }, 
+            {
+                "consumption": 1929.000, 
+                "month": "2017-01-01"
+            }, 
+            {
+                "consumption": 1929.000, 
+                "month": "2018-01-01"
+            },{
+                "consumption": 1929.000, 
+                "month": "2019-01-01"
+            }, 
+            {
+                "consumption": 1954.000, 
+                "month": "2020-01-01"
+            }, 
+            {
+                "consumption": 1979.000, 
+                "month": "2021-01-01"
+            }
+        ]
     },
     "Campeche": {
         "function": "office and classroom", 
@@ -7971,7 +8021,32 @@
             }
         ], 
         "longitude": -101.25, 
-        "area": 30607
+        "area": 30607,
+        "chilled water":[
+            {
+                "consumption": 2386.600, 
+                "month": "2016-01-01"
+            }, 
+            {
+                "consumption": 2181.000, 
+                "month": "2017-01-01"
+            }, 
+            {
+                "consumption": 2181.000, 
+                "month": "2018-01-01"
+            },{
+                "consumption": 2181.000, 
+                "month": "2019-01-01"
+            }, 
+            {
+                "consumption": 2465.000, 
+                "month": "2020-01-01"
+            }, 
+            {
+                "consumption": 2464.000, 
+                "month": "2021-01-01"
+            }
+        ]
     },
     "Veracruz": {
         "function": "dormitory", 
