--- a/data/json/monthlyEnergy_nameAsKey_randomized.json
+++ b/data/json/monthlyEnergy_nameAsKey_randomized.json
@@ -1,7 +1,7 @@
 {
     "Durango": {
         "function": "office",
-        "Latitude": 240277, 
+        "latitude": 240277, 
         "electric": [
             {
                 "consumption": 673365.603333333333, 
@@ -322,7 +322,7 @@
     },
     "Quintana Roo": {
         "function": "dormitory", 
-        "Latitude": 21.016667,
+        "latitude": 21.016667,
         "electric": [
             {
                 "consumption": 1378.35, 
@@ -618,7 +618,7 @@
     },
     "San Luis Potosí": {
         "function": "dormitory", 
-        "Latitude": 21.016667,
+        "latitude": 21.016667,
         "electric": [
             {
                 "consumption": 722550.73, 
@@ -914,7 +914,7 @@
     },
     "Nuevo León": {
         "function": "dormitory", 
-        "Latitude": 21.016667,
+        "latitude": 21.016667,
         "electric": [
             {
                 "consumption": 763871.33, 
@@ -1210,7 +1210,7 @@
     },
     "Oaxaca": {
         "function": "dormitory", 
-        "Latitude": 21.016667,
+        "latitude": 21.016667,
         "electric": [
             {
                 "consumption": 328767.57, 
@@ -1506,7 +1506,7 @@
     },
     "Estado de Mexico": {
         "function": "dormitory",
-        "Latitude": 194326,  
+        "latitude": 194326,  
         "electric": [
             {
                 "consumption": 602557.86, 
@@ -1802,7 +1802,7 @@
     }, 
     "Guanajuato": {
         "function": "dormitory", 
-        "Latitude": 21.016667,
+        "latitude": 21.016667,
         "electric": [
             {
                 "consumption": 602557.86, 
@@ -2709,7 +2709,7 @@
     },
     "Jalisco": {
         "function": "dormitory", 
-        "Latitude": 21.016667,
+        "latitude": 21.016667,
         "electric": [
             {
                 "consumption": 27850.3, 
@@ -3030,7 +3030,7 @@
     },
     "Michoacán": {
         "function": "dormitory", 
-        "Latitude": 21.016667,
+        "latitude": 21.016667,
         "electric": [
             {
                 "consumption": 296076.85, 
@@ -3995,7 +3995,7 @@
     },
     "Sinaloa": {
         "function": "dormitory", 
-        "Latitude": 21.016667,
+        "latitude": 21.016667,
         "electric": [
             {
                 "consumption": 326773.54, 
@@ -4291,7 +4291,7 @@
     },
     "Sonora": {
         "function": "dormitory", 
-        "Latitude": 21.016667,
+        "latitude": 21.016667,
         "electric": [
             {
                 "consumption": 726144.43, 
@@ -4587,7 +4587,7 @@
     },
     "Tamaulipas": {
         "function": "dormitory", 
-        "Latitude": 21.016667,
+        "latitude": 21.016667,
         "electric": [
             {
                 "consumption": 2354867.32, 
@@ -5847,7 +5847,7 @@
     },
     "Morelos": {
         "function": "dormitory", 
-        "Latitude": 21.016667,
+        "latitude": 21.016667,
         "electric": [
             {
                 "consumption": 0, 
@@ -6143,7 +6143,7 @@
     },
     "Nayarit": {
         "function": "dormitory", 
-        "Latitude": 21.016667,
+        "latitude": 21.016667,
         "electric": [
             {
                 "consumption": 55526.37, 
@@ -6439,7 +6439,7 @@
     },
     "Puebla": {
         "function": "dormitory", 
-        "Latitude": 21.016667,
+        "latitude": 21.016667,
         "electric": [
             {
                 "consumption": 339415.4, 
@@ -6735,7 +6735,7 @@
     },
     "Querétaro": {
         "function": "dormitory", 
-        "Latitude": 21.016667,
+        "latitude": 21.016667,
         "electric": [
             {
                 "consumption": 345601.83, 
@@ -7673,7 +7673,7 @@
     },
     "Guerrero": {
         "function": "dormitory", 
-        "Latitude": 21.016667,
+        "latitude": 21.016667,
         "electric": [
             {
                 "consumption": 1296529.01, 
@@ -7994,7 +7994,7 @@
     },
     "Hidalgo": {
         "function": "dormitory", 
-        "Latitude": 21.016667,
+        "latitude": 21.016667,
         "electric": [
             {
                 "consumption": 1077738.3, 
@@ -8315,7 +8315,7 @@
     },
     "Veracruz": {
         "function": "dormitory", 
-        "Latitude": 21.016667,
+        "latitude": 21.016667,
         "electric": [
             {
                 "consumption": 2182411.54, 
@@ -8611,7 +8611,7 @@
     },
     "Yucatán": {
         "function": "dormitory", 
-        "Latitude": 21.016667,
+        "latitude": 21.016667,
         "electric": [
             {
                 "consumption": 538787.33, 
@@ -8907,7 +8907,7 @@
     },
     "Plantas Móviles": {
         "function": "dormitory", 
-        "Latitude": 21.016667,
+        "latitude": 21.016667,
         "electric": [
             {
                 "consumption": 613.92, 
